# den

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.md  den.ps1  eslint.config.mjs  install.ps1  install.sh  justfile  package-lock.json  package.json  playwright.config.ts
.claude/: settings.local.json
.claude/agents/: checker.md
.claude/commands/: develop.md  release.md  ship.md
.claude/rules/: development.md  review-judgement.md  workflow.md
.claude/skills/deps-check/: SKILL.md
.github/workflows/: release.yml
docs/: chat-v2-design.md  remote-access-model.md
docs/superpowers/plans/: 2026-06-13-flow-development-workflow.md  2026-06-20-multiplexer-session-backend.md  2026-06-20-multiplexer-ux-enhancements.md  2026-06-24-vt-snapshot-phase1.md  2026-06-24-vt-snapshot-spike.md
docs/superpowers/specs/: 2026-06-13-flow-development-workflow-design.md  2026-06-13-terminal-session-scrollback-design.md  2026-06-20-multiplexer-session-backend-design.md  2026-06-20-multiplexer-session-backend-poc-findings.md  2026-06-20-multiplexer-ux-enhancements-design.md  2026-06-24-terminal-vt-snapshot-reconnect-design.md  2026-06-24-vt-snapshot-spike-findings.md
frontend/: DESIGN.md  index.html
frontend/css/: style.css
frontend/js/: app.js  auth.js  chat.js  claude-parser.js  claude-session.js  claude.js  clipboard-history.js  clipboard.js  filer-editor.js  filer-remote.js  filer-tree.js  filer.js  float-terminal.js  icons.js  keybar.js  markdown.js  peer-cache.js  session-history.js  settings-drag-list.js  settings-presets.js  settings.js  snippet.js  spinner.js  terminal-adapter.js  terminal.js  text-input.js  tls-trust.js  toast.js  ws-liveness.js
frontend/layouts/: den-bare.kdl  den-zellij.kdl  den.conf
frontend/test/: claude-parser.test.js  clipboard-history.test.js  icons.test.js  markdown.test.js  settings-presets.test.js  ws-liveness.test.js
scripts/: build-codemirror.js  build-restty.js  build-wterm.js  codemirror-entry.js  wterm-entry.js
src/: assets.rs  auth.rs  channel.rs  chat_hook.rs  clipboard_api.rs  clipboard_monitor.rs  config.rs  crypto.rs  lib.rs  main.rs  mcp_gate.rs  multiplexer_api.rs  peer.rs  port_detection.rs  port_forward.rs  port_monitor.rs  remote.rs  store.rs  store_api.rs  terminal_filter.rs  tls.rs  update.rs  ws.rs
src/chat/: api.rs  channel_api.rs  channel_state.rs  manager.rs  mod.rs  permission.rs  session.rs
src/claude/: connection.rs  mod.rs  session.rs  ssh_config.rs  ws.rs
src/filer/: api.rs  mod.rs  preview.rs
src/pty/: backend.rs  job.rs  manager.rs  mod.rs  registry.rs  replay_state.rs  ring_buffer.rs  session.rs
src/sftp/: api.rs  client.rs  mod.rs
src/ssh/: keys.rs  loopback.rs  mod.rs  server.rs
tests/: api_test.rs  filer_test.rs  registry_test.rs  sftp_e2e_test.py  ssh_test.py  vt_snapshot_spike.rs
tests/e2e/: auth.e2e.ts  claude-dir.e2e.ts  claude-session.e2e.ts  filer-api.e2e.ts  filer-switcher.e2e.ts  filer-ui.e2e.ts  helpers.ts  multiplexer-menu.e2e.ts  ports.e2e.ts  quick-connect.e2e.ts  sessions-modal.e2e.ts  sessions.e2e.ts  settings.e2e.ts  terminal.e2e.ts
