[package]
name = "den"
version = "2.5.2"
edition = "2024"
description = "A self-hosted web workstation accessible from tablets and phones"
license = "MIT"
repository = "https://github.com/jss826/den"
readme = "README.md"

[lib]
name = "den"
path = "src/lib.rs"

[[bin]]
name = "den"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
base64 = "0.22"
bytes = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.9"
rust-embed = "8"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12.1"
russh = { version = "0.57", default-features = false, features = ["flate2", "ring", "rsa"] }
russh-sftp = "2.1"
anyhow = "1"
dotenvy = "0.15"
gethostname = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio-tungstenite = "0.26"
hyper-util = { version = "0.1.20", features = ["server-auto", "http1", "http2", "tokio"] }
tower = { version = "0.5", features = ["util"] }
tokio-rustls = "0.26.4"
rustls = { version = "0.23.37", default-features = false, features = ["std", "ring"] }
rcgen = "0.14.7"
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
thiserror = "2.0.18"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_DataExchange",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_JobObjects",
    "Win32_System_Memory",
    "Win32_System_Power",
    "Win32_System_Threading",
] }

[target."cfg(not(windows))".dependencies]
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control"] }

[dev-dependencies]
http-body-util = "0.1"
serial_test = "3"
tempfile = "3"
urlencoding = "2"
rcgen = "0.14"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
tokio-rustls = "0.26"
sha2 = "0.10"
hex = "0.4"
serde_json = "1"
